# portfolio

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Leptos.toml  README.md  Shuttle.toml  deploy.sh  docker-compose.deploy.yml  docker-compose.yml  index.html  input.css  package-lock.json  package.json  setup-portfolio-deploy.sh  tailwind.config.js  tsconfig.json
.github/workflows/: deploy.yml
assets/: data.json
components/ActionButton/: index.tsx
components/ContactForm/: index.tsx
components/ControlInterface/: index.tsx
components/Input/: Input.module.css  index.tsx
components/ToggleTheme/: index.tsx
db/: index.ts
db/schema/: index.ts  lead.schema.ts  message.schema.ts
db/types/: index.ts  lead.type.ts  message.type.ts
pages/: _app.tsx  index.tsx
pages/api/: addContactRequest.ts
pages/blogs/: index.tsx
pages/projects/: index.tsx
public/assets/: script.js
src/: app.rs  components.rs  data.rs  db.rs  lib.rs  main.rs
src/components/: about.rs  contact.rs  home.rs  mod.rs  navbar.rs  projects.rs  resume.rs
src/pages/: analytics.rs
