[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.3", features = ["csr", "nightly"] }
leptos_axum = { version = "0.8.3", optional = true }
leptos_meta = { version = "0.8.3" }
leptos_router = { version = "0.8.3" }
axum = { version = "0.8.4", features = ["macros"], optional = true }
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros", "net", "fs", "time"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.6", features = ["fs"], optional = true }
simple_logger = { version = "5.0.0", optional = true }
log = "0.4.27"
serde_json = "1.0.145"
gloo-net = "0.6.0"

[features]
default = ["csr"]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:simple_logger",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "portfolio"
required-features = ["ssr"]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS package
output-name = "portfolio"
# The site root folder is where cargo-leptos generate all output
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM, CSS) is written
site-pkg-dir = "pkg"
# Assets source dir. All files found here will be copied and synchronized to site-root.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content
addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# The hostname where the app expects to be served from
site-addr = "127.0.0.1:3000"
# The browserlist query used for optimizing the CSS.
browsers = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
bin-features = ["ssr"]
# If the --no-default-features flag should be used when compiling the bin target
bin-default-features = false
# The features to use when compiling the lib target
lib-features = ["csr"]
# If the --no-default-features flag should be used when compiling the lib target
lib-default-features = false
